grocy/03_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  namespace: grocy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: grocy
  template:
    metadata:
      labels:
        name: grocy
    spec:
      containers:
        - name: grocy
          imagePullPolicy: Always
          image: ghcr.io/linuxserver/grocy:v4.2.0-ls250
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          volumeMounts:
            - name: db
              mountPath: /var/www/data
              subPath: data
            - name: db
              mountPath: /config
              subPath: config
            - name: tls
              mountPath: /config/keys
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: grocy-nfs
        - name: tls
          secret:
            secretName: grocy-tls
            items:
              - key: tls.key
                path: cert.key
              - key: tls.crt
                path: cert.crt
