grocy/04_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grocy
  namespace: grocy
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
  selector:
    name: grocy
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ipFamilyPolicy: PreferDualStack
